Evaluacion1/parser/evaluacion1_parser.go
// Code generated from Evaluacion1.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // Evaluacion1

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'.'", "','",
}
var symbolicNames = []string{
	"", "Point", "Colon", "Hex", "Number", "Letter", "Whitespace",
}

var ruleNames = []string{
	"start", "list", "h", "t", "tp",
}

type Evaluacion1Parser struct {
	*antlr.BaseParser
}

// NewEvaluacion1Parser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *Evaluacion1Parser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewEvaluacion1Parser(input antlr.TokenStream) *Evaluacion1Parser {
	this := new(Evaluacion1Parser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Evaluacion1.g4"

	return this
}

type DataHex struct {
	Valor    int
	Posicion int
}

type Decimal struct {
	Decimal1 float64
	Decimal2 float64
}

// Evaluacion1Parser tokens.
const (
	Evaluacion1ParserEOF        = antlr.TokenEOF
	Evaluacion1ParserPoint      = 1
	Evaluacion1ParserColon      = 2
	Evaluacion1ParserHex        = 3
	Evaluacion1ParserNumber     = 4
	Evaluacion1ParserLetter     = 5
	Evaluacion1ParserWhitespace = 6
)

// Evaluacion1Parser rules.
const (
	Evaluacion1ParserRULE_start = 0
	Evaluacion1ParserRULE_list  = 1
	Evaluacion1ParserRULE_h     = 2
	Evaluacion1ParserRULE_t     = 3
	Evaluacion1ParserRULE_tp    = 4
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Evaluacion1ParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Evaluacion1ParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) CopyFrom(ctx *StartContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type InicioContext struct {
	*StartContext
}

func NewInicioContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *InicioContext {
	var p = new(InicioContext)

	p.StartContext = NewEmptyStartContext()
	p.parser = parser
	p.CopyFrom(ctx.(*StartContext))

	return p
}

func (s *InicioContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InicioContext) List() IListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IListContext)
}

func (s *InicioContext) EOF() antlr.TerminalNode {
	return s.GetToken(Evaluacion1ParserEOF, 0)
}

func (s *InicioContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterInicio(s)
	}
}

func (s *InicioContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitInicio(s)
	}
}

func (p *Evaluacion1Parser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, Evaluacion1ParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewInicioContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(10)
		p.List()
	}
	{
		p.SetState(11)
		p.Match(Evaluacion1ParserEOF)
	}

	return localctx
}

// IListContext is an interface to support dynamic dispatch.
type IListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsListContext differentiates from other interfaces.
	IsListContext()
}

type ListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyListContext() *ListContext {
	var p = new(ListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Evaluacion1ParserRULE_list
	return p
}

func (*ListContext) IsListContext() {}

func NewListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ListContext {
	var p = new(ListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Evaluacion1ParserRULE_list

	return p
}

func (s *ListContext) GetParser() antlr.Parser { return s.parser }

func (s *ListContext) CopyFrom(ctx *ListContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DosNumeroContext struct {
	*ListContext
}

func NewDosNumeroContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DosNumeroContext {
	var p = new(DosNumeroContext)

	p.ListContext = NewEmptyListContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ListContext))

	return p
}

func (s *DosNumeroContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DosNumeroContext) AllH() []IHContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IHContext)(nil)).Elem())
	var tst = make([]IHContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IHContext)
		}
	}

	return tst
}

func (s *DosNumeroContext) H(i int) IHContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IHContext)
}

func (s *DosNumeroContext) Colon() antlr.TerminalNode {
	return s.GetToken(Evaluacion1ParserColon, 0)
}

func (s *DosNumeroContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterDosNumero(s)
	}
}

func (s *DosNumeroContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitDosNumero(s)
	}
}

func (p *Evaluacion1Parser) List() (localctx IListContext) {
	localctx = NewListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, Evaluacion1ParserRULE_list)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewDosNumeroContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(13)
		p.H()
	}
	{
		p.SetState(14)
		p.Match(Evaluacion1ParserColon)
	}
	{
		p.SetState(15)
		p.H()
	}

	return localctx
}

// IHContext is an interface to support dynamic dispatch.
type IHContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetHDecimal returns the HDecimal attribute.
	GetHDecimal() float64

	// SetHDecimal sets the HDecimal attribute.
	SetHDecimal(float64)

	// IsHContext differentiates from other interfaces.
	IsHContext()
}

type HContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	HDecimal float64
}

func NewEmptyHContext() *HContext {
	var p = new(HContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Evaluacion1ParserRULE_h
	return p
}

func (*HContext) IsHContext() {}

func NewHContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HContext {
	var p = new(HContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Evaluacion1ParserRULE_h

	return p
}

func (s *HContext) GetParser() antlr.Parser { return s.parser }

func (s *HContext) GetHDecimal() float64 { return s.HDecimal }

func (s *HContext) SetHDecimal(v float64) { s.HDecimal = v }

func (s *HContext) CopyFrom(ctx *HContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
	s.HDecimal = ctx.HDecimal
}

func (s *HContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type HTPTContext struct {
	*HContext
}

func NewHTPTContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *HTPTContext {
	var p = new(HTPTContext)

	p.HContext = NewEmptyHContext()
	p.parser = parser
	p.CopyFrom(ctx.(*HContext))

	return p
}

func (s *HTPTContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HTPTContext) AllT() []ITContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITContext)(nil)).Elem())
	var tst = make([]ITContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITContext)
		}
	}

	return tst
}

func (s *HTPTContext) T(i int) ITContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITContext)
}

func (s *HTPTContext) Point() antlr.TerminalNode {
	return s.GetToken(Evaluacion1ParserPoint, 0)
}

func (s *HTPTContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterHTPT(s)
	}
}

func (s *HTPTContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitHTPT(s)
	}
}

type HTContext struct {
	*HContext
}

func NewHTContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *HTContext {
	var p = new(HTContext)

	p.HContext = NewEmptyHContext()
	p.parser = parser
	p.CopyFrom(ctx.(*HContext))

	return p
}

func (s *HTContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HTContext) T() ITContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITContext)
}

func (s *HTContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterHT(s)
	}
}

func (s *HTContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitHT(s)
	}
}

func (p *Evaluacion1Parser) H() (localctx IHContext) {
	localctx = NewHContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, Evaluacion1ParserRULE_h)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		localctx = NewHTPTContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(17)
			p.T()
		}
		{
			p.SetState(18)
			p.Match(Evaluacion1ParserPoint)
		}
		{
			p.SetState(19)
			p.T()
		}

	case 2:
		localctx = NewHTContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(21)
			p.T()
		}

	}

	return localctx
}

// ITContext is an interface to support dynamic dispatch.
type ITContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetDhex returns the Dhex attribute.
	GetDhex() *DataHex

	// SetDhex sets the Dhex attribute.
	SetDhex(*DataHex)

	// IsTContext differentiates from other interfaces.
	IsTContext()
}

type TContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	Dhex   *DataHex
}

func NewEmptyTContext() *TContext {
	var p = new(TContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Evaluacion1ParserRULE_t
	return p
}

func (*TContext) IsTContext() {}

func NewTContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TContext {
	var p = new(TContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Evaluacion1ParserRULE_t

	return p
}

func (s *TContext) GetParser() antlr.Parser { return s.parser }

func (s *TContext) GetDhex() *DataHex { return s.Dhex }

func (s *TContext) SetDhex(v *DataHex) { s.Dhex = v }

func (s *TContext) CopyFrom(ctx *TContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
	s.Dhex = ctx.Dhex
}

func (s *TContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type THexContext struct {
	*TContext
}

func NewTHexContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *THexContext {
	var p = new(THexContext)

	p.TContext = NewEmptyTContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TContext))

	return p
}

func (s *THexContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *THexContext) Hex() antlr.TerminalNode {
	return s.GetToken(Evaluacion1ParserHex, 0)
}

func (s *THexContext) Tp() ITpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITpContext)
}

func (s *THexContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterTHex(s)
	}
}

func (s *THexContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitTHex(s)
	}
}

func (p *Evaluacion1Parser) T() (localctx ITContext) {
	localctx = NewTContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, Evaluacion1ParserRULE_t)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewTHexContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(24)
		p.Match(Evaluacion1ParserHex)
	}
	{
		p.SetState(25)
		p.Tp()
	}

	return localctx
}

// ITpContext is an interface to support dynamic dispatch.
type ITpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetDhex returns the Dhex attribute.
	GetDhex() *DataHex

	// SetDhex sets the Dhex attribute.
	SetDhex(*DataHex)

	// IsTpContext differentiates from other interfaces.
	IsTpContext()
}

type TpContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	Dhex   *DataHex
}

func NewEmptyTpContext() *TpContext {
	var p = new(TpContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Evaluacion1ParserRULE_tp
	return p
}

func (*TpContext) IsTpContext() {}

func NewTpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TpContext {
	var p = new(TpContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Evaluacion1ParserRULE_tp

	return p
}

func (s *TpContext) GetParser() antlr.Parser { return s.parser }

func (s *TpContext) GetDhex() *DataHex { return s.Dhex }

func (s *TpContext) SetDhex(v *DataHex) { s.Dhex = v }

func (s *TpContext) CopyFrom(ctx *TpContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
	s.Dhex = ctx.Dhex
}

func (s *TpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type EpTpContext struct {
	*TpContext
}

func NewEpTpContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EpTpContext {
	var p = new(EpTpContext)

	p.TpContext = NewEmptyTpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TpContext))

	return p
}

func (s *EpTpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EpTpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterEpTp(s)
	}
}

func (s *EpTpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitEpTp(s)
	}
}

type TpHexContext struct {
	*TpContext
}

func NewTpHexContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TpHexContext {
	var p = new(TpHexContext)

	p.TpContext = NewEmptyTpContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TpContext))

	return p
}

func (s *TpHexContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TpHexContext) Hex() antlr.TerminalNode {
	return s.GetToken(Evaluacion1ParserHex, 0)
}

func (s *TpHexContext) Tp() ITpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITpContext)
}

func (s *TpHexContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.EnterTpHex(s)
	}
}

func (s *TpHexContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Evaluacion1Listener); ok {
		listenerT.ExitTpHex(s)
	}
}

func (p *Evaluacion1Parser) Tp() (localctx ITpContext) {
	localctx = NewTpContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, Evaluacion1ParserRULE_tp)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(30)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case Evaluacion1ParserHex:
		localctx = NewTpHexContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(27)
			p.Match(Evaluacion1ParserHex)
		}
		{
			p.SetState(28)
			p.Tp()
		}

	case Evaluacion1ParserEOF, Evaluacion1ParserPoint, Evaluacion1ParserColon:
		localctx = NewEpTpContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}
